--- a/ci/pipelines/stemcells/tasks/make-stemcell-version.yml
+++ b/ci/pipelines/stemcells/tasks/make-stemcell-version.yml
@@ -9,5 +9,7 @@ image_resource:
 inputs:
 - name: bosh-src
 - name: published-stemcell
+outputs:
+- name: make-version
 run:
   path: bosh-src/ci/pipelines/stemcells/tasks/make-stemcell-version.sh
